--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cat Fact</title>
+    <title>Fun Facts</title>
 </head>
 <body>
-    <h1>Cat Fact</h1>
-    <!-- Add this paragraph element to display the cat fact -->
-    <p id="cat-fact">Loading...</p>
+    <h1>Fun Facts</h1>
+    <h2>Cat Fact</h2>
+    <p id="cat-fact">Loading cat fact...</p>
+    <h2>Random Useless Fact</h2>
+    <p id="useless-fact">Loading useless fact...</p>
     <script src="script.js" defer></script>  
 </body>
 </html>
+
+
