--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <p id="cat-fact">Loading cat fact...</p>
     <h2>Random Useless Fact</h2>
     <p id="useless-fact">Loading useless fact...</p>
+    <h2>Weather Forecast</h2>
+    <p id="weather">Loading weather data...</p>
     <script src="script.js" defer></script>  
 </body>
 </html>
