--- a/index.html
+++ b/index.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Fun Facts</title>
 </head>
+
 <body>
     <h1>Fun Facts</h1>
-    <h2>Cat Fact</h2>
-    <p id="cat-fact">Loading cat fact...</p>
-    <h2>Random Useless Fact</h2>
-    <p id="useless-fact">Loading useless fact...</p>
-    <h2>Weather Forecast</h2>
-    <p id="weather">Loading weather data...</p>
-    <script src="script.js" defer></script>  
+
+    <section class="fact-section" id="cat-fact-section">
+        <h2>Cat Fact</h2>
+        <p id="cat-fact">Loading cat fact...</p>
+    </section>
+
+    <section class="fact-section" id="useless-fact-section">
+        <h2>Random Useless Fact</h2>
+        <p id="useless-fact">Loading useless fact...</p>
+    </section>
+
+    <section class="fact-section" id="weather-section">
+        <h2>Weather Forecast</h2>
+        <p id="weather">Loading weather data...</p>
+    </section>
+
+    <script src="script.js" defer></script>
 </body>
+
 </html>
+
+
 
 
