weather deleted, flexbox added, facts fixed

--- a/public/index.html
+++ b/public/index.html
@@ -9,27 +9,27 @@
 <body>
     <h1>Fun Facts</h1>
 
-    <section class="fact-section" id="cat-fact-section">
-        <h2>🐱 Cat Fact</h2>
-        <p id="cat-fact">Loading cat fact...</p>
-        <button onclick="fetchCatFact()">🔄 New Fact</button>
-    </section>
+    <div class="container">
+        <section class="fact-section" id="cat-fact-section">
+            <h2>🐱 Cat Fact</h2>
+            <p id="cat-fact">Loading cat fact...</p>
+            <img id="cat-img" src="" alt="Random Cat" class="fact-image">
+            <button onclick="fetchCatFact()">🔄 New Fact</button>
+        </section>
 
-    <section class="fact-section" id="useless-fact-section">
-        <h2>🎲 Random Fact</h2>
-        <p id="useless-fact">Loading useless fact...</p>
-        <button onclick="fetchUselessFact()">🔄 New Fact</button>
-    </section>
-
-    <section class="fact-section" id="weather-section">
-        <h2>🌦️ Weather Forecast</h2>
-        <p id="weather">Loading weather data...</p>
-        <button onclick="fetchWeather()">🔄 Refresh</button>
-    </section>
+        <section class="fact-section" id="useless-fact-section">
+            <h2>🎲 Random Fact</h2>
+            <p id="useless-fact">Loading useless fact...</p>
+            <img id="useless-img" src="" alt="Random Funny Image" class="fact-image">
+            <button onclick="fetchUselessFact()">🔄 New Fact</button>
+        </section>
+    </div>
 
     <script src="script.js" defer></script>
 </body>
 </html>
+
+
 
 
 
