little style improvements

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Fun Facts</title>
 </head>
 <body>
-    <h1>Fun Facts</h1>
+    <h1>😸Fun Facts👽</h1>
 
     <div class="container">
         <section class="fact-section" id="cat-fact-section">
