--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         </section>
 
         <section class="fact-section" id="useless-fact-section">
-            <h2>🎲 Random Fact</h2>
+            <h2 class="randomFact">🎲 Random Fact</h2>
             <p id="useless-fact">Loading useless fact...</p>
             <img id="useless-img" src="" alt="Random Funny Image" class="fact-image">
             <button onclick="fetchUselessFact()">🔄 New Fact</button>
